// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Snapshots renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "borderColor": "#dedede",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 28,
      "justifyContent": "center",
      "width": 28,
    }
  }
/>
`;

exports[`Checkbox Snapshots renders correctly 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#2C7CF6",
      "borderColor": "#2C7CF6",
      "borderRadius": 10,
      "borderWidth": 1,
      "height": 28,
      "justifyContent": "center",
      "width": 28,
    }
  }
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "testUri": "../../../storybook/stories/Checkbox/check.png",
      }
    }
    style={
      Object {
        "backgroundColor": "transparent",
        "height": 20,
        "width": 20,
      }
    }
  />
</View>
`;
